--- a/style.css
+++ b/style.css
@@ -87,10 +87,16 @@ nav {
     flex-direction: column;
     justify-content: center;
     height: 55px;
-    font-size: 22px;
+    font-size: 20px;
     text-decoration: none;
     color: black;
     box-shadow: rgba(116, 116, 116, 0.233) 0px 1px 4px 0px;
+}
+
+@media (max-width: 430px){
+    #menu > li > a {
+        font-size: 4.5vw;
+    }
 }
 
 #menu > li > a:hover{
@@ -143,6 +149,14 @@ article > h1 {
     text-align: center;
     padding-top: 30px;
     font-size: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+article > h2 {
+    text-align: center;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 article > p, article > #conscientizacao1 > p {
@@ -237,10 +251,13 @@ label {
 }
 
 input, textarea, option, select {
-    width: 100%;
+    width: 90%;
     max-width: 500px;
     font-size: 20px;
     margin-bottom: 20px;
+    box-shadow: inset 1px 1px 5px #000000a9;
+    border-radius: 3px;
+    border-style: none;
 }
 
 select {
